read all sensors with all multiplexers, code is finished

--- a/multiplexer1.ioc
+++ b/multiplexer1.ioc
@@ -1,10 +1,20 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_12
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_8
+ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-1\#ChannelRegularConversion=1
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.Rank-3\#ChannelRegularConversion=1
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
+ADC2.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC2.IPParameters=Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.NbrOfConversionFlag=1
+ADC2.Rank-4\#ChannelRegularConversion=1
+ADC2.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC3.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_11
+ADC3.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag
+ADC3.NbrOfConversionFlag=1
+ADC3.Rank-2\#ChannelRegularConversion=1
+ADC3.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -13,10 +23,12 @@ KeepUserPlacement=false
 Mcu.CPN=STM32F407VGT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IPNb=4
+Mcu.IP1=ADC2
+Mcu.IP2=ADC3
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IPNb=6
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
@@ -24,8 +36,8 @@ Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA5
 Mcu.Pin11=PA6
 Mcu.Pin12=PA7
-Mcu.Pin13=PC4
-Mcu.Pin14=PC5
+Mcu.Pin13=PB0
+Mcu.Pin14=PB1
 Mcu.Pin15=PB2
 Mcu.Pin16=PE7
 Mcu.Pin17=PE8
@@ -61,7 +73,7 @@ Mcu.Pin43=PB9
 Mcu.Pin44=PE1
 Mcu.Pin45=VP_SYS_VS_Systick
 Mcu.Pin5=PC0
-Mcu.Pin6=PC2
+Mcu.Pin6=PC1
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA4
@@ -149,6 +161,12 @@ PA9.GPIO_Mode=GPIO_MODE_INPUT
 PA9.GPIO_PuPd=GPIO_NOPULL
 PA9.Locked=true
 PA9.Signal=USB_OTG_FS_VBUS
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=M1_Analog
+PB0.Signal=ADCx_IN8
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=M2_Analog
+PB1.Signal=ADCx_IN9
 PB10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB10.GPIO_Label=CLK_IN [MP45DT02_CLK]
 PB10.GPIO_Mode=GPIO_MODE_AF_PP
@@ -187,6 +205,9 @@ PC0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC0.Locked=true
 PC0.PinState=GPIO_PIN_SET
 PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=M3_Analog
+PC1.Signal=ADCx_IN11
 PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC10.GPIO_Label=I2S3_SCK [CS43L22_SCLK]
 PC10.GPIO_Mode=GPIO_MODE_AF_PP
@@ -209,10 +230,6 @@ PC15-OSC32_OUT.GPIOParameters=GPIO_Label
 PC15-OSC32_OUT.GPIO_Label=PC15-OSC32_OUT
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC2.GPIOParameters=GPIO_Label
-PC2.GPIO_Label=M1_Analog
-PC2.Locked=true
-PC2.Signal=ADCx_IN12
 PC3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC3.GPIO_Label=PDM_OUT [MP45DT02_DOUT]
 PC3.GPIO_Mode=GPIO_MODE_AF_PP
@@ -220,14 +237,6 @@ PC3.GPIO_PuPd=GPIO_NOPULL
 PC3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC3.Locked=true
 PC3.Signal=I2S2_SD
-PC4.GPIOParameters=GPIO_Label
-PC4.GPIO_Label=M2_Analog
-PC4.Locked=true
-PC4.Signal=ADCx_IN14
-PC5.GPIOParameters=GPIO_Label
-PC5.GPIO_Label=M3_Analog
-PC5.Locked=true
-PC5.Signal=ADCx_IN15
 PC7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC7.GPIO_Label=I2S3_MCK [CS43L22_MCLK]
 PC7.GPIO_Mode=GPIO_MODE_AF_PP
@@ -395,12 +404,12 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
-SH.ADCx_IN12.0=ADC1_IN12,IN12
-SH.ADCx_IN12.ConfNb=1
-SH.ADCx_IN14.0=ADC1_IN14,IN14
-SH.ADCx_IN14.ConfNb=1
-SH.ADCx_IN15.0=ADC1_IN15,IN15
-SH.ADCx_IN15.ConfNb=1
+SH.ADCx_IN11.0=ADC3_IN11,IN11
+SH.ADCx_IN11.ConfNb=1
+SH.ADCx_IN8.0=ADC1_IN8,IN8
+SH.ADCx_IN8.ConfNb=1
+SH.ADCx_IN9.0=ADC2_IN9,IN9
+SH.ADCx_IN9.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
